<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#F0F5F4"
    >


    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#B4B8B8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="@+id/headerBackground"
        app:layout_constraintBottom_toBottomOf="@+id/headerBackground">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="#202121"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programacion"
            android:textColor="#202121"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvInstitucion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iplacex"
            android:textColor="#202121"
            android:textSize="13sp"
            android:textStyle="italic" />
    </LinearLayout>






    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBackground"
        app:layout_constraintVertical_bias="0.089"
        app:srcCompat="@drawable/logo" />




    <TextView
        android:id="@+id/tvPastel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/pastel_de_choclo"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/tvCantidad1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="396dp"
        android:text="@string/tvCantidad1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvPastel"
        app:layout_constraintTop_toBottomOf="@+id/tvPastel"
        app:layout_constraintVertical_bias="0.291" />

    <TextView
        android:id="@+id/tvTotalUnidad1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="404dp"
        android:text="@string/tvTotalUnidad1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvCantidad1"
        app:layout_constraintTop_toBottomOf="@+id/tvCantidad1"
        app:layout_constraintVertical_bias="0.444" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548"
        app:srcCompat="@drawable/cazuela" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805" />

    <TextView
        android:id="@+id/tvCazuela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="364dp"
        android:text="@string/tvCazuela"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvPastel"
        app:layout_constraintTop_toBottomOf="@+id/tvPastel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvCantidad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:text="@string/tvCantidad2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvCazuela"
        app:layout_constraintTop_toBottomOf="@+id/tvCazuela"
        app:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/etncantidad1"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginBottom="444dp"
        android:ems="10"
        android:autofillHints=".."
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toEndOf="@+id/tvCantidad1"
        app:layout_constraintTop_toBottomOf="@+id/tvPastel"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/tvComida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comida"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/tvTotalComida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="180dp"
        android:text="@string/tvTotalComida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvCantidad1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/tvPropina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/propina"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvComida"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvComida"
        app:layout_constraintTop_toBottomOf="@+id/tvComida"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/tvTotalPropina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_any"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTotalComida"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalComida"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvPropina"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPropina"
        app:layout_constraintVertical_bias="0.174" />

    <TextView
        android:id="@+id/tvTotalNumerico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_any"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTotalPropina"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalPropina"
        app:layout_constraintVertical_bias="0.174" />

    <TextView
        android:id="@+id/tvTotalUnidad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTotalUnidad2"
        android:textStyle="bold"
        android:autofillHints=".."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvCantidad2"
        app:layout_constraintTop_toBottomOf="@+id/tvCantidad2"
        app:layout_constraintVertical_bias="0.055" />


    <EditText
        android:id="@+id/etncantidad2"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:ems="10"
        android:textSize="16sp"
        android:inputType="number"
        android:autofillHints=".."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etncantidad1"
        app:layout_constraintTop_toBottomOf="@+id/etncantidad1"
        app:layout_constraintVertical_bias="0.24"
        tools:ignore="LabelFor"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844"
        app:srcCompat="@drawable/pastel" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#B4B8B8"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvFooterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer"
            android:textColor="#1E1F1F"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="#1E1F1F"
            android:textSize="10sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>